# openapi-model-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  generator.rs  lib.rs  main.rs  models.rs  parser.rs
